<resources>

    <string name="CheckDataActivity_tv_category">Categorie:</string>
    <string name="CheckDataActivity_tv_kindOfDefect">Soort defect:</string>
    <string name="CheckDataActivity_bt_confirmReportButton">Bevestig melding</string>

    <string name="activityCreateNewReport_tv_noPicture">Ik heb geen foto.</string>
    <string name="activityCreateNewReport_tv_category">Categorie</string>
    <string name="activityCreateNewReport_bt_makePicture">Kies/maak foto</string>
    <string name="activityCreateNewReport_bt_continue">Doorgaan</string>
    <string name="activityCreateNewReport_text_chooseSource">Bron kiezen</string>
    <string name="activityCreateNewReport_text_chooseSourceText">Kies camera om een foto te maken of gallerij om een foto te kiezen.</string>
    <string name="activityCreateNewReport_text_itemCamera">Camera</string>
    <string name="activityCreateNewReport_text_itemGallery">Gallerij</string>
    <string name="activityCreateNewReport_text_imageTooLarge">Er is een fout opgetreden met je afbeelding. Probeer een andere afbeelding.</string>
    <string name="activityCreateNewReport_text_noImageSelected">Geen afbeelding geselecteerd. Heeft u geen afbeelding, selecteer dan \"Ik heb geen foto.\".</string>
    <string name="activityCreateNewReport_tv_CommentTextView">Commentaar</string>

    <string name="activityCreateNewReportDifferentLocation_bt_addImage">Kies een afbeelding</string>
    <string name="activityCreateNewReportDifferentLocation_tv_locationTextView">Commentaar</string>
    <string name="activityCreateNewReportDifferentLocation_et_streetHint">Straat</string>

    <string name="activityTermsAndConditions_bt_accept">Accepteren</string>
    <string name="activityTermsAndConditions_bt_decline">Niet accepteren</string>
    <string name="activityTermsAndConditios_tv_termsAndConditions">Alle informatie, die u ons doorgeeft, behandelt de gemeente vertrouwelijk. Persoons- of adresgegevens gebruikt de gemeente uitsluitend waarvoor u deze heeft doorgegeven. De gemeente Breda behandelt uw e-mail vertrouwelijk, maar sluit niet helemaal uit dat een e-mail door derden ingezien wordt. \n \nDe gemeente Breda probeert om e-mailberichten, die bij het centrale e-mailadres contact@breda.nl (link stuurt een e-mail) of als reactie via het contactformulier op de site binnenkomen, binnen 5 werkdagen te beantwoorden.</string>
    <string name="app_name" translatable="false">InfraMeld Breda</string>
    <string name="detailed_report_label">Details</string>
    <string name="check_data_label">Controleer gegevens</string>
    <string name="create_new_report_label">Maak nieuwe melding</string>
    <string name="terms_and_conditions_label">Algemene voorwaarden</string>
    <string name="add_email_label">Voeg uw e-mail toe</string>

    <string name="no_location_permission_title">Permissies nodig</string>
    <string name="no_location_permission_description">Locatie permissies zijn nodig om de app te kunnen gebruiken. Wilt u deze toestaan?</string>
    <string name="no_location_permission_positive">Ja</string>
    <string name="no_location_permission_negative">Nee</string>
    <string name="activityEmail_no_submit">Vul een geldig e-mailadres in en accepteer de algemene voorwaarden om door te gaan.</string>

    <string name="themeStandard">Standaard thema</string>
    <string name="themeNight">Donker thema</string>

    <string-array name="themeSpinner">
        <item>@string/themeStandard</item>
        <item>@string/themeNight</item>
    </string-array>

    <string-array name="spinnerLanguageData">
        <item>English</item>
        <item>Nederlands</item>
    </string-array>

    <string name="AddEmailActivity_tv_introText">Uw e-mailadres is nodig om gebruik \nte kunnen maken van deze app</string>
    <string name="AddEmailActivity_tv_emailaddress">E-mailadres:</string>
    <string name="AddEmailActivity_tv_TermsText">Algemene voorwaarden</string>
    <string name="AddEmailActivity_cb_termsAccepted">Ik accepteer de algemene voorwaarden</string>
    <string name="AddEmailActivity_bt_emailConfirmButton">E-mail bevestigen</string>

    <string name="ReportReceivedActivity_tv_ReceivedText">Melding ontvangen!</string>

    <string name="homescreen_left_tab">Kaart</string>
    <string name="homescreen_right_tab">Overzicht</string>

    <string name="spinner_loading">Aan het laden. Even geduld alstublieft.</string>
    <string name="splash_loading">Aan het laden...</string>
    <string name="no_reports_found">Geen meldingen gevonden</string>

    <string name="DetailedReportActivity_tv_categoryText">Categorie:</string>
    <string name="DetailedReportActivity_tv_kindOfDefectText">Soort defect:</string>
    <string name="DetailedReportActivity_tv_reportText">Dit is al</string>
    <string name="DetailedReportActivity_tv_reportText2">keer gemeld</string>
    <string name="DetailedReportActivity_tv_commentTitle">Commentaar:</string>

    <string name="activitySplashScreen_tv_appVersion">Versie</string>
    <string name="activitySplashScreen_text_unknownVersion">onbekend</string>

    <string name="UserSettingsActivity_tv_currentEmailText">E-mailadres:</string>
    <string name="UserSettingsActivity_tv_AppSettings">App Instellingen</string>
    <string name="UserSettingsActivity_tv_AccSettings">Account Instellingen</string>
    <string name="UserSettingsActivity_sw_ChangeSettings">Instellingen Bewerken</string>
    <string name="UserSettingsAcitivity_name">Instellingen</string>

    <string name="FavoriteReportsActivity_name">Mijn favoriete meldingen</string>

    <string name="mode_ready" translatable="false">Snake\nPress Up To Play</string>
    <string name="mode_pause" translatable="false">Paused\nPress Up To Resume</string>
    <string name="mode_lose" translatable="false">Game Over\nScore: %1$d \nPress Up To Play</string>
    <string name="no_wifi">Verbind met een WiFi netwerk voor een betere werking van deze app</string>
    <string name="info_textview">Deze app is gemaakt in opdracht van gemeente Breda en is ontwikkelt door: Thomas Lucas, Thimo Koolen, Giede van Gils, Mark Meijer, Quoc-Sy Luong, Cas de Pender, Mark de Jong en Thomas Mout.</string>
    <string name="info_title">Over deze app</string>
    <string name="menu_view_reports">Bekijk alle meldingen</string>
    <string name="menu_view_your_reports">Bekijk favorite meldingen</string>
    <string name="menu_settings">Instellingen</string>
    <string name="menu_about">Over</string>

    <string name="fab_location">Ik ben op de huidige locatie</string>
    <string name="fab_other">Ik ben ergens anders</string>
    <string name="fab_text">Melding maken</string>

    <string name="FavoriteReportsActivity_Label">Favoriete Meldingen</string>

    <!-- Toasts-->
    <string name="toast_report_added">Melding toegevoegd aan favorieten</string>
    <string name="toast_report_added_error">Fout! Melding kon niet toegevoegd worden!</string>
    <string name="toast_report_deleted">Melding verwijderd uit favorieten</string>
    <string name="toast_report_deleted_error">Fout! Melding kon niet verwijderd worden!</string>

    <string name="no_internet">Geen internet</string>
    <string name="radius_title">Radius:</string>
    <string name="settings_theme">Thema:</string>
    <string name="settings_language">Taal:</string>
    <string name="confirm_settings">Instellingen wijzigen</string>
    <string name="incorrect_email">E-mail geupdate.</string>
    <string name="about_share_text">Dit coole team heeft InfraMeld gemaakt!</string>
    <string name="created_report_share_text_prefix">Ik heb een melding met InfraMeld gemaakt: </string>
    <string name="addressNotFound">Adres niet gevonden</string>
    <string name="apprestart_title">Opnieuw opstarten</string>
    <string name="apprestart_description">Om de wijzigingen goed weer te geven, dient de app opnieuw opgestart te worden.</string>
    <string name="settingsSaved">Instellingingen opgeslagen</string>
    <string name="upvote">stem</string>
    <string name="upvotes">stemmen</string>
    
    <string name="location_off_title">Locatie benodigd</string>
    <string name="location_off_text">Locatie is benodigd om de melding te kunnen maken.</string>
    <string name="location_off_positive">Zet locatie aan</string>
    <string name="location_off_negative">Terug</string>
    
    <string name="api_address">http://37.34.59.50/breda/CitySDK/</string>
</resources>
