<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.gemeente.breda.bredaapp.CreateNewReportDifferentLocationActivity">

    <ImageView
        android:id="@+id/activityCreateNewReportDifferentLocation_iv_defectImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="DefectObjectImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@color/colorAccentDark" />

    <Button
        android:id="@+id/activityCreateNewReportDifferentLocation_bt_addImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="?attr/normalBackground"
        android:text="@string/activityCreateNewReportDifferentLocation_bt_addImage"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/activityCreateNewReportDifferentLocation_iv_defectImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/activityCreateNewReport_spr_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:dropDownWidth="match_parent"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityCreateNewReportDifferentLocation_bt_addImage"/>

    <Spinner
        android:id="@+id/activityCreateNewReport_spr_defects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityCreateNewReport_spr_categories"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/activityCreateNewReportDifferentLocation_tv_locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activityCreateNewReport_spr_defects"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/activityCreateNewReportDifferentLocation_tv_locationTextView"
        android:textSize="16dp"
        android:layout_marginStart="8dp"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/activityCreateNewReportDifferentLocation_mv_locationMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activityCreateNewReportDifferentLocation_tv_locationTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"></com.google.android.gms.maps.MapView>

    <Button
        android:id="@+id/activityCreateNewReportDifferentLocation_bt_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/normalBackground"
        android:text="@string/activityCreateNewReport_bt_continue"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</android.support.constraint.ConstraintLayout>
