<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.gemeente.breda.bredaapp.DetailedReportActivity">


    <RelativeLayout
        android:id="@+id/DetailedReportActivity_rl_relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009">

        <ProgressBar
            android:id="@+id/DetailedReportActivity_pb_imageProgressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:tint="@color/colorPrimary"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/DetailedReportActivity_iv_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"/>


    </RelativeLayout>


    <TextView
        android:id="@+id/DetailedReportActivity_tv_reportText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DetailedReportActivity_tv_reportText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/DetailedReportActivity_rl_relativeLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/DetailedReportActivity_tv_reportCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/DetailedReportActivity_tv_reportText"
        app:layout_constraintLeft_toRightOf="@+id/DetailedReportActivity_rl_relativeLayout"
        app:layout_constraintVertical_bias="0.03"
        android:layout_marginLeft="8dp"
        android:text="10000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DetailedReportActivity_tv_reportText2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/DetailedReportActivity_tv_reportCounter"
        app:layout_constraintTop_toBottomOf="@+id/DetailedReportActivity_tv_reportText"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-1dp"/>

    <Button
        android:id="@+id/DetailedReportActivity_bt_extraReportBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_plus_one_black_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/DetailedReportActivity_rl_relativeLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetailedReportActivity_tv_reportText"
        app:layout_constraintVertical_bias="0.04"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/DetailedReportActivity_rl_relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:text="@string/DetailedReportActivity_tv_categoryText"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/DetailedReportActivity_tv_categoryInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:text="@string/DetailedReportActivity_tv_kindOfDefectText"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/DetailedReportActivity_tv_kindOfDefectInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textSize="16sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/DetailedReportActivity_tv_commentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:textSize="18sp"
                android:text="@string/DetailedReportActivity_tv_commentTitle"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/DetailedReportActivity_tv_commentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="TextView"
                    />

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentMapView_FL_mapLayout"
        android:name="com.google.android.gms.maps.SupportMapsFragment"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"/>-->
    </FrameLayout>

    <TextView
        android:id="@+id/DetailedReportActivity_tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/DetailedReportActivity_bt_extraReportBtn"
        app:layout_constraintLeft_toRightOf="@+id/DetailedReportActivity_rl_relativeLayout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/DetailedReportActivity_iv_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentMapView_FL_mapLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_directions_black_48dp"/>

</android.support.constraint.ConstraintLayout>
